--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,8 @@
 {erl_opts, [debug_info]}.
 {deps, [
         {cowboy, "2.9.0"},
-        {exomler, {git, "https://github.com/erlangbureau/exomler.git", {tag, "0.7.0"}}},
-        {mochiweb, {git, "https://github.com/mochi/mochiweb.git", {tag, "v2.22.0"}}},
+%        {exomler, {git, "https://github.com/erlangbureau/exomler.git", {tag, "0.7.0"}}},
+%        {mochiweb, {git, "https://github.com/mochi/mochiweb.git", {tag, "v2.22.0"}}},
         {uuid, {git, "https://github.com/okeuday/uuid.git", {tag, "v2.0.2"}}}
        ]
 }.
