use sys.config.src

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,10 @@
-{erl_opts, [debug_info]}.
+%{erl_opts, [debug_info]}.
+{erl_opts, [
+    debug_info,
+    nowarn_export_all,
+    {d,'APP_NAME', 'cache_redirect'}
+]}.
+
 {deps, [
         {cowboy, "2.9.0"},
         {hackney,{git, "https://github.com/benoitc/hackney.git", {tag, "1.16.0"}}},
