--- a/rebar.config
+++ b/rebar.config
@@ -6,14 +6,14 @@
 ]}.
 
 {deps, [
-        {cowboy, "2.9.0"},
+        {cowboy, {git, "https://github.com/ninenines/cowboy.git",{tag, "2.9.0"}}},
         {hackney,{git, "https://github.com/benoitc/hackney.git", {tag, "1.16.0"}}},
         {uuid, {git, "https://github.com/okeuday/uuid.git", {tag, "v2.0.2"}}}
        ]
 }.
 
 {shell, [
-   {config, "config/sys.config.src"},
+%   {config, "config/sys.config.src"},
     {apps, [cr]}
 ]}.
 
@@ -22,6 +22,8 @@
          
         {dev_mode, true},
         {include_erts, false},
+        {sys_config_src, "./config/sys.config.src"},
+        {vm_args_src, "./config/vm.args.src"},
 
         {extended_start_script, true}
        ]
