--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 {erl_opts, [
     debug_info,
     nowarn_export_all,
-    {d,'APP_NAME', 'cache_redirect'}
+    {d,'APP_NAME', 'cr'}
 ]}.
 
 {deps, [
